--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-<body>
-tomjackbear.cc
-</body>
+  <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9362243934111013" crossorigin="anonymous"></script>
+  </head>  
+  <body>
+    tomjackbear.cc
+  </body>
 </html>
